@@ -13,11 +13,12 @@
     <version>0.0.1</version>
     <name>chatbot</name>
     <description>The chatbot developed based on the Azure OpenAI large model.</description>
-    <url/>
+
     <properties>
         <java.version>21</java.version>
         <main.basedir>${project.parent.basedir}</main.basedir>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.ai</groupId>
@@ -48,6 +49,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
@@ -67,7 +72,186 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <os>
+                    <family>linux</family>
+                    <arch>x86_64</arch>
+                </os>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>io.netty</groupId>
+                    <artifactId>netty-transport-native-epoll</artifactId>
+                    <classifier>${os.detected.classifier}</classifier>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>oci-image</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <layers>
+                                <enabled>true</enabled>
+                            </layers>
+                            <excludes>
+                                <exclude>
+                                    <groupId>org.projectlombok</groupId>
+                                    <artifactId>lombok</artifactId>
+                                </exclude>
+                            </excludes>
+                            <image>
+                                <builder>paketobuildpacks/builder:tiny</builder>
+                                <name>com.silong.llm/${project.artifactId}:${project.version}</name>
+                                <pullPolicy>IF_NOT_PRESENT</pullPolicy>
+                                <publish>false</publish>
+                                <env>
+                                    <BPE_DELIM_JAVA_TOOL_OPTIONS xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
+                                    <BPE_APPEND_JAVA_TOOL_OPTIONS>
+                                        -Dreactor.netty.http.server.accessLogEnabled=true -XX:MinRAMPercentage=50.0
+                                        -XX:MaxRAMPercentage=80.0 -XX:+UseZGC -XX:+DisableExplicitGC
+                                        -XX:ReservedCodeCacheSize=64m -XX:InitialCodeCacheSize=64m -XX:ConcGCThreads=2
+                                        -XX:ParallelGCThreads=6 -XX:ZCollectionInterval=120
+                                        -XX:ZAllocationSpikeTolerance=5 -XX:ZUncommitDelay=600
+                                        -XX:+UnlockDiagnosticVMOptions -XX:-ZProactive
+                                        -Xlog:safepoint,classhisto*=trace,age*,gc*=info:file=/var/log/app/gc/gc-%t.log:time,tid,tags:filecount=5,filesize=50m
+                                        -XX:+HeapDumpOnOutOfMemoryError
+                                    </BPE_APPEND_JAVA_TOOL_OPTIONS>
+                                    <BP_NATIVE_IMAGE>false</BP_NATIVE_IMAGE>
+                                    <BP_JVM_TYPE>JRE</BP_JVM_TYPE>
+                                    <BP_JVM_VERSION>${java.version}.*</BP_JVM_VERSION>
+                                    <!--                                    <SERVICE_BINDING_ROOT>/bindings</SERVICE_BINDING_ROOT>-->
+                                </env>
+                                <!--                                <bindings>-->
+                                <!--                                    <binding>${basedir}/bindings/dependency-mapping:/bindings/dependency-mapping-->
+                                <!--                                    </binding>-->
+                                <!--                                    <binding>${basedir}/deps:/deps</binding>-->
+                                <!--                                </bindings>-->
+                            </image>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>build-info</id>
+                                <goals>
+                                    <goal>build-info</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <goals>
+                                    <goal>build-image</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>repackage</id>
+                                <goals>
+                                    <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>pre-integration-test</id>
+                                <goals>
+                                    <goal>start</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>post-integration-test</id>
+                                <goals>
+                                    <goal>stop</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>native-image</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <configuration>
+                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                            <metadataRepository>
+                                <enabled>true</enabled>
+                            </metadataRepository>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>add-reachability-metadata</id>
+                                <goals>
+                                    <goal>add-reachability-metadata</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>
+                                    <groupId>org.projectlombok</groupId>
+                                    <artifactId>lombok</artifactId>
+                                </exclude>
+                            </excludes>
+                            <image>
+                                <builder>paketobuildpacks/builder:tiny</builder>
+                                <name>com.silong.llm/${project.artifactId}:${project.version}</name>
+                                <pullPolicy>IF_NOT_PRESENT</pullPolicy>
+                                <publish>false</publish>
+                                <env>
+                                    <BP_BINARY_COMPRESSION_METHOD>upx</BP_BINARY_COMPRESSION_METHOD>
+                                    <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+                                    <BP_JVM_TYPE>JRE</BP_JVM_TYPE>
+                                    <BP_JVM_VERSION>${java.version}.*</BP_JVM_VERSION>
+                                    <!--                                    <SERVICE_BINDING_ROOT>/bindings</SERVICE_BINDING_ROOT>-->
+                                    <!--                                    <HTTPS_PROXY>http://127.0.0.1:8080</HTTPS_PROXY>-->
+                                    <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
+                                        --verbose
+                                        -H:+PrintAnalysisCallTree
+                                        -H:Log=registerResource:3
+                                        --report-unsupported-elements-at-runtime
+                                        -H:+ReportExceptionStackTraces
+                                        -H:IncludeResources="zoo/.*"
+                                        -H:IncludeResources="application-etcd.properties"
+                                        -H:IncludeResources="logback-spring.xml"
+                                    </BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
+                                </env>
+                                <!--                                <bindings>-->
+                                <!--                                    <binding>${basedir}/bindings/dependency-mapping:/bindings/dependency-mapping-->
+                                <!--                                    </binding>-->
+                                <!--                                    <binding>${basedir}/deps:/deps</binding>-->
+                                <!--                                </bindings>-->
+                            </image>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+            </extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -84,22 +268,6 @@
                             <artifactId>lombok</artifactId>
                         </path>
                     </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
                 </configuration>
             </plugin>
         </plugins>
